Eystein fixed some css to align text and whitespace.

--- a/css/style.css
+++ b/css/style.css
@@ -1126,7 +1126,7 @@ label {
  *
  */
 
-#team { text-align: center; }
+/* #team { text-align: center; } */
   #team h2 {
     color: #444;
     margin: 0;
@@ -1285,6 +1285,7 @@ label {
   z-index: 1;
   border-top: 1px solid #eee;
   background-color: #f4f4f4;
+  margin-bottom: 0;
 }  
   #footer .row { margin: 0 10%; }
 
